# custom-gofannon-tools

./: pyproject.toml  requirements.txt  tool_manifest.json
custom_gofannon/: get_pdf_text_from_url.py
